update android manifest

--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -62,18 +62,18 @@
       android:resource="@string/asset_statements"
     />
 
+    <!-- android:label="@string/app_name"
+     android:screenOrientation="portrait" -->
     <activity
-      android:name=".SplashActivity"
-      android:theme="@style/SplashTheme"
-      android:label="@string/app_name"
-      android:screenOrientation="portrait"
-      android:exported="true"
-    >
+     android:name=".SplashActivity" 
+     android:theme="@style/SplashTheme"
+ 
+     android:exported="true"
+      >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
-
     </activity>
 
     <activity
@@ -87,18 +87,14 @@
     >
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
-
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
-
         <data android:scheme="brightid" />
       </intent-filter>
       <intent-filter android:autoVerify="true">
         <action android:name="android.intent.action.VIEW" />
-
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
-
         <data
           android:scheme="https"
           android:host="app.brightid.org"
@@ -107,5 +103,4 @@
       </intent-filter>
     </activity>
   </application>
-
 </manifest>
