--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -254,6 +254,8 @@ dependencies {
 
     androidTestImplementation('com.wix:detox:+')
 
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+
     // implementation 'androidx.appcompat:appcompat:1.3.1'
 
     // Work around https://github.com/BrightID/BrightID/issues/1089
