--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
   <uses-permission android:name="android.permission.READ_CONTACTS" />
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
+    <!-- android:theme="@style/AppTheme" -->
+
   <application
     android:name=".MainApplication"
     android:label="@string/app_name"
     android:icon="@mipmap/ic_launcher"
     android:roundIcon="@mipmap/ic_launcher_round"
-    android:theme="@style/AppTheme"
     android:windowSoftInputMode="adjustResize"
     android:allowBackup="true"
     android:restoreAnyVersion="true"
@@ -25,6 +26,7 @@
     android:hasFragileUserData="true"
     android:largeHeap="true"
     android:networkSecurityConfig="@xml/network_security_config"
+    android:theme="@style/Theme.App.Starting"
   >
 
     <!-- Change the value to true to enable pop-up for in foreground (remote-only, for local use ignoreInForeground) -->
@@ -65,17 +67,16 @@
 
     <!-- android:label="@string/app_name"
      android:screenOrientation="portrait" -->
-    <activity
-     android:name=".SplashActivity" 
+    <!-- <activity
+     android:name=".SplashScreenActivity"
      android:theme="@style/SplashTheme"
- 
      android:exported="true"
       >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
-    </activity>
+    </activity> -->
 
     <activity
       android:name=".MainActivity"
@@ -86,6 +87,10 @@
       android:screenOrientation="portrait"
       android:exported="true"
     >
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
