--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -33,9 +33,10 @@
     "@react-native-community/slider": "3.0.3",
     "@react-native-community/viewpager": "4.2.2",
     "@react-native-picker/picker": "1.9.11",
-    "@react-navigation/drawer": "5.12.3",
-    "@react-navigation/native": "5.9.2",
-    "@react-navigation/stack": "5.14.2",
+    "@react-navigation/drawer": "6.5.8",
+    "@react-navigation/elements": "1.3.14",
+    "@react-navigation/native": "6.1.3",
+    "@react-navigation/stack": "6.3.12",
     "@reduxjs/toolkit": "1.5.0",
     "@types/crypto-js": "^4.1.0",
     "@types/jsbn": "^1.2.30",
