--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "android": "react-native run-android --appIdSuffix debug",
     "ios": "react-native run-ios  --simulator 'iPhone 14'",
+    "ios:se": "react-native run-ios  --simulator 'iPhone SE (3rd generation)'",
     "start": "react-native start",
     "start:detox": "RN_SRC_EXT=e2e.js,e2e.ts react-native start",
     "build:detox:android": "detox build -c android.emu.debug",
-    "build:detox:ios": "detox build -c ios.sim.debug",
+    "build:detox:ios": "detox build -c ios.debug",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'  --assets-dest='./ios'",
     "test:android": "detox test -c android.emu.debug",
-    "test:ios": "detox test -c ios.sim.debug",
+    "test:ios": "detox test -c ios.debug",
     "test": "jest",
     "lint": "eslint 'src' --quiet --fix",
     "postinstall": "npx jetify && npx patch-package",
