--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -21,7 +21,8 @@
     "build:release": "cd android && ./gradlew assembleRelease && cd ..",
     "build:staging": "cd android && ./gradlew assembleStaging && cd ..",
     "mermaid": "find ./diagrams -type f -name *.mmd -exec mmdc -i {} \\;",
-    "m1-install": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1 yarn install"
+    "check-dependencies": "rnx-align-deps",
+    "fix-dependencies": "rnx-align-deps --write"
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "3.12.0",
@@ -70,7 +71,7 @@
     "qrcode": "1.5.0",
     "ramda": "0.27.1",
     "react": "17.0.2",
-    "react-dom": "16.11.0",
+    "react-dom": "17.0.2",
     "react-i18next": "11.16.2",
     "react-native": "0.66.3",
     "react-native-barcode-mask": "1.2.4",
@@ -117,6 +118,7 @@
     "@babel/runtime": "^7.17.8",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
+    "@rnx-kit/align-deps": "^2.1.3",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-native": "^11.5.0",
     "@types/jest": "^27.4.1",
@@ -165,5 +167,35 @@
   },
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^8.9.0"
+  },
+  "rnx-kit": {
+    "kitType": "app",
+    "alignDeps": {
+      "presets": [
+        "./exactVersionsPreset.js"
+      ],
+      "requirements": [
+        "react-native@0.66"
+      ],
+      "capabilities": [
+        "animation",
+        "babel-preset-react-native",
+        "checkbox",
+        "core",
+        "core-android",
+        "core-ios",
+        "gestures",
+        "jest",
+        "navigation/native",
+        "navigation/stack",
+        "react",
+        "react-dom",
+        "react-test-renderer",
+        "safe-area",
+        "screens",
+        "storage",
+        "svg"
+      ]
+    }
   }
 }
