--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
   <uses-permission android:name="android.permission.READ_CONTACTS" />
   <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+  <uses-permission android:name="android.permission.READ_PROFILE" />
 
   <application
     android:name=".MainApplication"
