--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -87,6 +87,7 @@
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "8.0.0",
     "react-native-localize": "2.2.4",
+    "react-native-logs": "^5.0.1",
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "1.1.0",
     "react-native-network-info": "^5.2.1",
