upgrade deps remove http-bridge

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -14,7 +14,7 @@
     "test:android": "detox test -c android.emu.debug",
     "test:ios": "detox test -c ios.debug",
     "test": "jest",
-    "lint": "eslint 'src' --quiet --fix",
+    "lint": "eslint src",
     "postinstall": "npx jetify && npx patch-package",
     "test:watch": "npm test -- --watch",
     "updateSnap": "jest --updateSnapshot",
@@ -26,14 +26,14 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "4.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
-    "@react-native-community/checkbox": "0.5.14",
+    "@react-native-community/checkbox": "0.5.15",
     "@react-native-community/clipboard": "1.5.1",
-    "@react-native-community/push-notification-ios": "1.10.1",
+    "@react-native-community/push-notification-ios": "1.11.0",
     "@react-native-community/slider": "4.4.2",
     "@react-native-community/viewpager": "4.2.2",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/drawer": "6.6.2",
     "@react-navigation/elements": "1.3.17",
     "@react-navigation/native": "6.1.6",
@@ -59,30 +59,29 @@
     "expr-eval": "^2.0.2",
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.8",
-    "i18next": "22.4.10",
+    "i18next": "22.4.15",
     "immer": "8.0.1",
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
     "libphonenumber-js": "^1.9.49",
-    "lodash": "4.17.20",
-    "moment": "2.29.1",
+    "lodash": "4.17.21",
+    "moment": "2.29.4",
     "promise.any": "^2.0.2",
     "prop-types": "15.8.1",
-    "qrcode": "1.5.1",
+    "qrcode": "1.5.3",
     "ramda": "0.27.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-i18next": "12.1.5",
-    "react-native": "0.66.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "12.2.2",
+    "react-native": "0.71.7",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "4.2.1",
-    "react-native-code-push": "7.1.0",
+    "react-native-code-push": "8.0.1",
     "react-native-contacts": "7.0.5",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
     "react-native-error-boundary": "^1.2.1",
     "react-native-gesture-handler": "2.9.0",
-    "react-native-http-bridge": "https://github.com/BrightID/react-native-http-bridge",
     "react-native-image-crop-picker": "0.37.3",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "8.0.0",
@@ -94,19 +93,19 @@
     "react-native-phone-number-input": "2.1.0",
     "react-native-push-notification": "8.1.1",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.14.4",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-reanimated": "2.17.0",
+    "react-native-safe-area-context": "4.5.2",
     "react-native-screens": "3.20.0",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "13.8.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "7.1.0",
-    "react-redux": "7.2.8",
+    "react-redux": "8.0.5",
     "redux-mock-store": "1.5.4",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.2",
-    "reselect": "4.1.7",
+    "reselect": "4.1.8",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
@@ -114,57 +113,58 @@
     "xml2js": "0.4.23"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
+    "@babel/core": "^7.20.0",
+    "@babel/eslint-parser": "^7.21.3",
     "@babel/plugin-syntax-export-default-from": "^7.16.7",
-    "@babel/runtime": "^7.17.8",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "@rnx-kit/align-deps": "^2.1.3",
     "@testing-library/jest-native": "^5.3.3",
-    "@testing-library/react-native": "^11.5.0",
-    "@types/jest": "^27.4.1",
+    "@testing-library/react-native": "^12.1.1",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
     "@types/ramda": "^0.27.38",
-    "@types/react": "^17.0.34",
-    "@types/react-native": "^0.66.4",
+    "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/redux-persist": "^4.3.1",
     "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "axios": "^0.26.1",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.2.1",
     "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "i18next-parser": "3.0.0",
-    "jest": "^27.5.1",
+    "i18next-parser": "7.7.0",
+    "jest": "^29.2.1",
+    "jetifier": "^2.0.0",
     "lint-staged": "^13.1.2",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "0.73.9",
     "mock-async-storage": "^2.2.0",
     "msw": "^1.0.1",
-    "prettier": "^2.2.1",
-    "react-test-renderer": "17.0.2",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
     "resolve": "^1.20.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.8.4"
   },
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0"
@@ -198,5 +198,8 @@
         "svg"
       ]
     }
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
