--- a/BrightID/.gitignore
+++ b/BrightID/.gitignore
@@ -20,6 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+ios/.xcode.env.local
 
 # Android/IntelliJ
 #
@@ -30,6 +31,9 @@ local.properties
 *.hprof
 .secret
 .log
+.cxx/
+*.keystore
+!debug.keystore
 
 # node.js
 #
@@ -37,11 +41,6 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# BUCK
-buck-out/
-\.buckd/
-*.keystore
-!debug.keystore
 
 # fastlane
 #
@@ -50,16 +49,21 @@ buck-out/
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
 
 # Bundle artifact
 *.jsbundle
 
-# CocoaPods
+# Ruby / CocoaPods
 /ios/Pods/
+/vendor/bundle/
 package-lock.json
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
 
 Setting
 core-js-pure@*
