--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -2,83 +2,51 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "30.0.2"
+        buildToolsVersion = "33.0.0"
         minSdkVersion = 21
-        compileSdkVersion = 31
-        targetSdkVersion = 31
+        compileSdkVersion = 33
+        targetSdkVersion = 33
         ext.kotlinVersion = '1.5.32'
-        firebaseMessagingVersion = "21.1.0"
+        // googlePlayServicesVersion = "+" 
+        // firebaseMessagingVersion = "21.1.0"
+
+        // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
+        ndkVersion = "23.1.7779620"
     }
     repositories {
         google()
+        mavenCentral()
         maven {
             // All of Detox' artifacts are provided via the npm module
             url "$rootDir/../node_modules/detox/Detox-android"
         }
-        mavenCentral()
         maven { url "https://maven.google.com" }
         maven { url "https://www.jitpack.io" }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.2.2")
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "com.google.gms:google-services:4.3.3"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath("com.android.tools.build:gradle:7.3.1")
+        classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath("com.google.gms:google-services:4.3.14")
     }
 }
 
-allprojects {
-    repositories {
-        exclusiveContent {
-            // We get React Native's Android binaries exclusively through npm,
-            // from a local Maven repo inside node_modules/react-native/.
-            // (The use of exclusiveContent prevents looking elsewhere like Maven Central
-            // and potentially getting a wrong version.)
-            filter {
-                includeGroup "com.facebook.react"
-            }
-            forRepository {
-                maven {
-                    url "$rootDir/../node_modules/react-native/android"
-                }
-            }
-        }
-        mavenCentral()
-        mavenLocal()
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
-        }
-        maven {
-            // All of Detox' artifacts are provided via the npm module
-            url "$rootDir/../node_modules/detox/Detox-android"
-        }
-        maven {
-            // Android JSC is installed from npm
-            url("$rootDir/../node_modules/jsc-android/dist")
-        }
-        // included for react-native blur view
-        jcenter()
-        google()
-        maven { url 'https://maven.google.com' }
-        maven { url "https://www.jitpack.io" }
-    }
-}
-
-subprojects { subproject ->
-    afterEvaluate{
-        if((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
-            android {
-                // Force all subprojects to use one and only one set of versions
-                // See https://github.com/wix/Detox/issues/2712 for context
-                compileSdkVersion rootProject.ext.compileSdkVersion
-                buildToolsVersion rootProject.ext.buildToolsVersion
-                defaultConfig {
-                    minSdkVersion rootProject.ext.minSdkVersion
-                    targetSdkVersion rootProject.ext.targetSdkVersion
-                }
-            }
-        }
-    }
-}
+// subprojects { subproject ->
+//     if(project['name'] == 'react-native-http-bridge'){
+//         project.configurations { compile { } }
+//     }
+//     afterEvaluate{
+//         if((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
+//             android {
+//                 // Force all subprojects to use one and only one set of versions
+//                 // See https://github.com/wix/Detox/issues/2712 for context
+//                 compileSdkVersion rootProject.ext.compileSdkVersion
+//                 buildToolsVersion rootProject.ext.buildToolsVersion
+//                 defaultConfig {
+//                     minSdkVersion rootProject.ext.minSdkVersion
+//                     targetSdkVersion rootProject.ext.targetSdkVersion
+//                 }
+//             }
+//         }
+//     }
+// }
