--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -166,6 +166,7 @@
     "mock-async-storage": "^2.2.0",
     "msw": "^1.0.1",
     "prettier": "^2.2.1",
+    "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "17.0.2",
     "resolve": "^1.20.0",
     "typescript": "^4.4.4"
