--- a/BrightID/android/gradle.properties
+++ b/BrightID/android/gradle.properties
@@ -26,5 +26,5 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2560m
+org.gradle.jvmargs=-Xmx2560m --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
 AsyncStorage_db_size_in_MB=10
