--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -102,7 +102,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.20.0",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "13.8.0",
+    "react-native-svg": "^14.0.0",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "7.1.0",
