--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "com.android.application"
 
-apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'com.google.gms.google-services'
 
 import com.android.build.OutputFile
 
@@ -255,10 +255,10 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
       // Add the Firebase SDK for Google Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+    // implementation 'com.google.firebase:firebase-analytics:17.4.1'
 
     // Add the SDK for Firebase Cloud Messaging
-    implementation 'com.google.firebase:firebase-messaging:20.1.7'
+    // implementation 'com.google.firebase:firebase-messaging:20.1.7'
 
     // react-native-keychain
     implementation project(':react-native-keychain')
