--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -7,7 +7,6 @@ buildscript {
         compileSdkVersion = 31
         targetSdkVersion = 34
         ext.kotlinVersion = '1.5.32'
-        firebaseMessagingVersion = "21.1.0"
     }
     repositories {
         google()
@@ -22,7 +21,7 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "com.google.gms:google-services:4.3.3"
+        // classpath "com.google.gms:google-services:4.3.3"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
