--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BrightID",
-  "version": "4.36.0",
+  "version": "5.0.0-[preview]",
   "private": true,
   "scripts": {
     "android": "react-native run-android --appIdSuffix debug",
@@ -29,146 +29,151 @@
     "prepare:production": "ln -sf ./google-services.json-prod android/app/google-services.json"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "4.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@expo/react-native-action-sheet": "4.1.0",
+    "@react-native-async-storage/async-storage": "2.1.1",
+    "@react-native-clipboard/clipboard": "1.16.1",
     "@react-native-community/blur": "4.4.1",
-    "@react-native-community/checkbox": "0.5.14",
-    "@react-native-community/clipboard": "1.5.1",
-    "@react-native-community/slider": "4.4.2",
+    "@react-native-community/checkbox": "0.5.17",
+    "@react-native-community/slider": "4.5.5",
     "@react-native-community/viewpager": "4.2.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "6.6.2",
     "@react-navigation/elements": "1.3.17",
-    "@react-navigation/native": "6.1.6",
+    "@react-navigation/native": "6.0.8",
     "@react-navigation/native-stack": "6.9.12",
-    "@react-navigation/stack": "6.3.16",
+    "@react-navigation/stack": "6.3.21",
     "@reduxjs/toolkit": "1.5.0",
-    "@types/crypto-js": "^4.1.0",
-    "@types/jsbn": "^1.2.30",
-    "@types/lodash": "^4.14.178",
-    "@types/qrcode": "^1.4.2",
     "apisauce": "2.0.1",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
-    "compare-versions": "^4.1.3",
+    "compare-versions": "4.1.3",
     "crypto-js": "3.3.0",
-    "detox": "19",
+    "detox": "^19.13.0",
     "ed2curve": "0.3.0",
     "emittery": "0.6.0",
-    "events": "3.2.0",
-    "expr-eval": "^2.0.2",
+    "events": "3.3.0",
+    "expr-eval": "2.0.2",
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.8",
     "i18next": "22.4.10",
     "immer": "8.0.1",
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
-    "libphonenumber-js": "^1.9.49",
-    "lodash": "4.17.20",
-    "moment": "2.29.1",
-    "promise.any": "^2.0.2",
+    "libphonenumber-js": "1.11.20",
+    "lodash": "4.17.21",
+    "moment": "2.30.1",
+    "promise.any": "2.0.6",
     "prop-types": "15.8.1",
-    "qrcode": "1.5.1",
+    "qrcode": "1.5.4",
     "ramda": "0.27.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "12.1.5",
-    "react-native": "0.66.5",
+    "react-native": "0.77.1",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "4.2.1",
     "react-native-contacts": "7.0.5",
-    "react-native-country-picker-modal": "2.0.0",
+    "react-native-country-picker-modal": "2.11.0",
     "react-native-dropdownalert": "4.5.1",
-    "react-native-error-boundary": "^1.2.1",
-    "react-native-gesture-handler": "2.9.0",
-    "react-native-http-bridge": "https://github.com/BrightID/react-native-http-bridge",
+    "react-native-error-boundary": "1.2.8",
+    "react-native-gesture-handler": "2.23.1",
+    "react-native-http-bridge": "github:BrightID/react-native-http-bridge",
     "react-native-image-crop-picker": "0.37.3",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "8.0.0",
     "react-native-localize": "2.2.4",
-    "react-native-logs": "^5.0.1",
+    "react-native-logs": "5.3.0",
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "1.1.0",
-    "react-native-network-info": "^5.2.1",
+    "react-native-network-info": "5.2.1",
     "react-native-phone-number-input": "2.1.0",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "3.20.0",
+    "react-native-reanimated": "3.16.7",
+    "react-native-safe-area-context": "5.2.0",
+    "react-native-screens": "4.7.0",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "^14.0.0",
+    "react-native-svg": "15.11.1",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "7.1.0",
     "react-redux": "7.2.8",
-    "redux-mock-store": "1.5.4",
+    "redux-mock-store": "1.5.5",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.2",
     "reselect": "4.1.7",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
-    "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
+    "tweetnacl": "github:RnbWd/tweetnacl-native",
     "xml2js": "0.4.23"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-syntax-export-default-from": "^7.16.7",
-    "@babel/runtime": "^7.17.8",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@react-native-community/eslint-plugin": "^1.0.0",
-    "@rnx-kit/align-deps": "^2.1.3",
-    "@testing-library/jest-native": "^5.3.3",
-    "@testing-library/react-native": "^11.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/ramda": "^0.27.38",
-    "@types/react": "^17.0.34",
-    "@types/react-native": "^0.66.4",
-    "@types/react-native-vector-icons": "^6.4.6",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/redux-persist": "^4.3.1",
-    "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "axios": "^0.26.1",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-syntax-export-default-from": "^7.25.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/runtime": "^7.26.9",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.77.1",
+    "@react-native/eslint-config": "0.77.1",
+    "@react-native/metro-config": "0.77.1",
+    "@react-native/typescript-config": "0.77.1",
+    "@rnx-kit/align-deps": "3.0.3",
+    "@testing-library/jest-native": "5.4.3",
+    "@testing-library/react-native": "11.5.0",
+    "@types/crypto-js": "4.2.2",
+    "@types/jsbn": "1.2.33",
+    "@types/lodash": "4.17.15",
+    "@types/qrcode": "1.5.5",
+    "@types/jest": "^29.5.14",
+    "@types/ramda": "0.27.38",
+    "@types/react": "^18.3.18",
+    "@types/react-native-vector-icons": "6.4.18",
+    "@types/react-redux": "7.1.34",
+    "@types/react-test-renderer": "^18.3.1",
+    "@types/xml2js": "0.4.8",
+    "@typescript-eslint/eslint-plugin": "4.15.1",
+    "@typescript-eslint/parser": "4.15.1",
+    "axios": "0.26.1",
+    "babel-jest": "26.6.3",
+    "babel-plugin-inline-import": "3.0.0",
+    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.8",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "12.3.1",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-plugin-babel": "5.3.1",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jest": "24.1.3",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "4.0.8",
     "i18next-parser": "3.0.0",
-    "jest": "^27.5.1",
-    "lint-staged": "^13.1.2",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "mock-async-storage": "^2.2.0",
-    "msw": "^1.0.1",
-    "patch-package": "^8.0.0",
-    "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.2.1",
-    "react-native-clean-project": "^4.0.1",
-    "react-test-renderer": "17.0.2",
-    "resolve": "^1.20.0",
-    "typescript": "^4.4.4"
+    "jest": "^29.7.0",
+    "lint-staged": "13.1.2",
+    "mock-async-storage": "2.9.0",
+    "msw": "1.0.1",
+    "patch-package": "8.0.0",
+    "postinstall-postinstall": "2.1.0",
+    "prettier": "2.8.8",
+    "react-native-clean-project": "4.0.3",
+    "react-test-renderer": "18.3.1",
+    "resolve": "1.22.10",
+    "typescript": "5.0.4"
   },
   "optionalDependencies": {
-    "@mermaid-js/mermaid-cli": "^9.3.0"
+    "@mermaid-js/mermaid-cli": "9.3.0"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "rnx-kit": {
     "kitType": "app",
@@ -177,12 +182,13 @@
         "./exactVersionsPreset.js"
       ],
       "requirements": [
-        "react-native@0.66"
+        "react-native@0.77"
       ],
       "capabilities": [
         "animation",
         "babel-preset-react-native",
         "checkbox",
+        "clipboard",
         "core",
         "core-android",
         "core-ios",
@@ -200,5 +206,5 @@
       ]
     }
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
