--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -36,7 +36,7 @@
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.5",
     "@react-native-community/viewpager": "4.2.2",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/drawer": "6.6.2",
     "@react-navigation/elements": "1.3.17",
     "@react-navigation/native": "6.0.8",
@@ -73,7 +73,7 @@
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "4.2.1",
     "react-native-contacts": "7.0.5",
-    "react-native-country-picker-modal": "2.11.0",
+    "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
     "react-native-error-boundary": "1.2.8",
     "react-native-gesture-handler": "2.23.1",
@@ -123,41 +123,38 @@
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react-native": "11.5.0",
     "@types/crypto-js": "4.2.2",
+    "@types/jest": "^29.5.14",
     "@types/jsbn": "1.2.33",
     "@types/lodash": "4.17.15",
     "@types/qrcode": "1.5.5",
-    "@types/jest": "^29.5.14",
     "@types/ramda": "0.27.38",
     "@types/react": "^18.3.18",
     "@types/react-native-vector-icons": "6.4.18",
     "@types/react-redux": "7.1.34",
     "@types/react-test-renderer": "^18.3.1",
     "@types/xml2js": "0.4.8",
-    "@typescript-eslint/eslint-plugin": "4.15.1",
-    "@typescript-eslint/parser": "4.15.1",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "axios": "0.26.1",
     "babel-jest": "26.6.3",
     "babel-plugin-inline-import": "3.0.0",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.8",
     "eslint": "^8.57.1",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-airbnb-typescript": "12.3.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-import-resolver-typescript": "^3.8.2",
     "eslint-plugin-babel": "5.3.1",
-    "eslint-plugin-flowtype": "5.2.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jest": "24.1.3",
-    "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "i18next-parser": "3.0.0",
     "jest": "^29.7.0",
+    "jetifier": "^2.0.0",
     "lint-staged": "13.1.2",
     "mock-async-storage": "2.9.0",
     "msw": "1.0.1",
