--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -75,7 +75,7 @@
     "react-native-contacts": "7.0.5",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
-    "react-native-error-boundary": "1.2.8",
+    "react-native-error-boundary": "1.2.7",
     "react-native-gesture-handler": "2.23.1",
     "react-native-http-bridge": "github:BrightID/react-native-http-bridge",
     "react-native-image-crop-picker": "0.37.3",
@@ -112,6 +112,7 @@
     "@babel/plugin-syntax-export-default-from": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/runtime": "^7.26.9",
+    "@jest/globals": "^29.7.0",
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
