--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -3,7 +3,8 @@
   "version": "5.0.0-[preview]",
   "private": true,
   "scripts": {
-    "android": "react-native run-android --appIdSuffix debug",
+    "android": "react-native run-android",
+    "android-debug": "react-native run-android --appIdSuffix debug",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "start:detox": "RN_SRC_EXT=e2e.js,e2e.ts react-native start",
@@ -47,7 +48,7 @@
     "buffer": "5.6.0",
     "compare-versions": "4.1.3",
     "crypto-js": "3.3.0",
-    "detox": "^19.13.0",
+    "detox": "^20.34.1",
     "ed2curve": "0.3.0",
     "emittery": "0.6.0",
     "events": "3.3.0",
@@ -64,22 +65,21 @@
     "promise.any": "2.0.6",
     "prop-types": "15.8.1",
     "qrcode": "1.5.4",
-    "ramda": "0.27.1",
+    "ramda": "0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "12.1.5",
     "react-native": "0.77.1",
     "react-native-barcode-mask": "1.2.4",
-    "react-native-camera": "4.2.1",
-    "react-native-contacts": "7.0.5",
+    "react-native-blob-util": "^0.21.2",
+    "react-native-contacts": "8.0.4",
     "react-native-country-picker-modal": "2.0.0",
-    "react-native-dropdownalert": "4.5.1",
+    "react-native-dropdownalert": "5.1.0",
     "react-native-error-boundary": "1.2.7",
     "react-native-gesture-handler": "2.23.1",
-    "react-native-http-bridge": "github:BrightID/react-native-http-bridge",
-    "react-native-image-crop-picker": "0.37.3",
+    "react-native-image-crop-picker": "0.42.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
-    "react-native-keychain": "8.0.0",
+    "react-native-keychain": "9.2.3",
     "react-native-localize": "2.2.4",
     "react-native-logs": "5.3.0",
     "react-native-modal-overlay": "1.3.1",
@@ -89,19 +89,19 @@
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "5.2.0",
-    "react-native-screens": "4.7.0",
+    "react-native-screens": "4.8.0",
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "15.11.1",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
-    "react-native-vector-icons": "7.1.0",
+    "react-native-vector-icons": "10.2.0",
+    "react-native-vision-camera": "^4.6.3",
     "react-redux": "7.2.8",
     "redux-mock-store": "1.5.5",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.2",
     "reselect": "4.1.7",
-    "rn-fetch-blob": "0.12.0",
-    "stream": "0.0.2",
+    "stream": "0.0.3",
     "timers": "0.1.1",
     "tweetnacl": "github:RnbWd/tweetnacl-native",
     "xml2js": "0.4.23"
@@ -127,26 +127,25 @@
     "@types/jsbn": "1.2.33",
     "@types/lodash": "4.17.15",
     "@types/qrcode": "1.5.5",
-    "@types/ramda": "0.27.38",
+    "@types/ramda": "0.30.2",
     "@types/react": "^18.3.18",
     "@types/react-native-vector-icons": "6.4.18",
     "@types/react-redux": "7.1.34",
     "@types/react-test-renderer": "^18.3.1",
-    "@types/xml2js": "0.4.8",
+    "@types/xml2js": "0.4.14",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "axios": "0.26.1",
-    "babel-jest": "26.6.3",
+    "babel-jest": "29.7.0",
     "babel-plugin-inline-import": "3.0.0",
-    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-module-resolver": "5.0.2",
     "babel-plugin-transform-remove-console": "6.9.4",
     "enzyme": "3.11.0",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "7.2.0",
+    "eslint-config-prettier": "10.0.1",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-import-resolver-typescript": "^3.8.2",
     "eslint-plugin-babel": "5.3.1",
-    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -155,12 +154,12 @@
     "i18next-parser": "3.0.0",
     "jest": "^29.7.0",
     "jetifier": "^2.0.0",
-    "lint-staged": "13.1.2",
+    "lint-staged": "15.4.3",
     "mock-async-storage": "2.9.0",
     "msw": "1.0.1",
     "patch-package": "8.0.0",
     "postinstall-postinstall": "2.1.0",
-    "prettier": "2.8.8",
+    "prettier": "3.5.1",
     "react-native-clean-project": "4.0.3",
     "react-test-renderer": "18.3.1",
     "resolve": "1.22.10",
@@ -203,5 +202,5 @@
       ]
     }
   },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
