--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="org.brightid"
->
-
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.CAMERA" />
+  xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.CAMERA" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -14,40 +11,40 @@
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
   <uses-permission android:name="android.permission.READ_PROFILE" />
 
-  <application
-    android:name=".MainApplication"
-    android:label="@string/app_name"
-    android:icon="@mipmap/ic_launcher"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:theme="@style/AppTheme"
-    android:windowSoftInputMode="adjustResize"
-    android:allowBackup="true"
-    android:restoreAnyVersion="true"
-    android:usesCleartextTraffic="true"
-    android:hasFragileUserData="true"
-    android:largeHeap="true"
-    android:networkSecurityConfig="@xml/network_security_config"
-  >
+    <application
+      android:name=".MainApplication"
+      android:label="@string/app_name"
+      android:icon="@mipmap/ic_launcher"
+      android:roundIcon="@mipmap/ic_launcher_round"
+      android:theme="@style/AppTheme"
+      android:supportsRtl="true"
+      android:windowSoftInputMode="adjustResize"
+      android:allowBackup="true"
+      android:restoreAnyVersion="true"
+      android:usesCleartextTraffic="true"
+      android:hasFragileUserData="true"
+      android:largeHeap="true"
+      android:networkSecurityConfig="@xml/network_security_config">
 
-    <meta-data
-      android:name="asset_statements"
-      android:resource="@string/asset_statements"
-    />
+       <meta-data
+        android:name="asset_statements"
+        android:resource="@string/asset_statements"
+       />
 
-    <activity
+     <activity
       android:name=".SplashActivity"
       android:theme="@style/SplashTheme"
       android:label="@string/app_name"
       android:screenOrientation="portrait"
-      android:exported="true"
-    >
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
+      android:exported="true">
+      
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+      </activity>
 
-    <activity
+       <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
       android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
@@ -73,6 +70,6 @@
         />
       </intent-filter>
     </activity>
-  </application>
+    </application>
 
 </manifest>
