--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -8,8 +8,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "start:detox": "RN_SRC_EXT=e2e.js,e2e.ts react-native start",
-    "build:detox:android": "detox build -c android.emu.debug",
-    "build:detox:ios": "detox build -c ios.debug",
+    "build:detox:android": "detox build --configuration android.emu.debug",
+    "build:detox:ios": "detox build --configuration ios.sim.debug",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'  --assets-dest='./ios'",
     "test:android": "detox test -c android.emu.debug",
     "test:ios": "detox test -c ios.debug",
@@ -34,7 +34,7 @@
     "@react-native-clipboard/clipboard": "1.16.1",
     "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.17",
-    "@react-native-community/slider": "4.5.5",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-community/viewpager": "4.2.2",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/drawer": "6.6.2",
@@ -48,9 +48,9 @@
     "buffer": "5.6.0",
     "compare-versions": "4.1.3",
     "crypto-js": "3.3.0",
-    "detox": "^20.34.1",
+    "detox": "^20.34.2",
     "ed2curve": "0.3.0",
-    "emittery": "0.6.0",
+    "emittery": "1.1.0",
     "events": "3.3.0",
     "expr-eval": "2.0.2",
     "fast-json-stable-stringify": "2.1.0",
@@ -76,7 +76,7 @@
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "5.1.0",
     "react-native-error-boundary": "1.2.7",
-    "react-native-gesture-handler": "2.23.1",
+    "react-native-gesture-handler": "2.24.0",
     "react-native-image-crop-picker": "0.42.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "9.2.3",
@@ -89,13 +89,13 @@
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "5.2.0",
-    "react-native-screens": "4.8.0",
+    "react-native-screens": "4.9.0",
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "15.11.1",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "10.2.0",
-    "react-native-vision-camera": "^4.6.3",
+    "react-native-vision-camera": "^4.6.4",
     "react-redux": "7.2.8",
     "redux-mock-store": "1.5.5",
     "redux-persist": "6.0.0",
@@ -144,7 +144,7 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "^3.8.2",
+    "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.11.0",
@@ -159,7 +159,7 @@
     "msw": "1.0.1",
     "patch-package": "8.0.0",
     "postinstall-postinstall": "2.1.0",
-    "prettier": "3.5.1",
+    "prettier": "3.5.2",
     "react-native-clean-project": "4.0.3",
     "react-test-renderer": "18.3.1",
     "resolve": "1.22.10",
