--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -10,6 +10,11 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url("$rootDir/../node_modules/detox/Detox-android")
+        }
+        maven { url 'https://maven.google.com' }
+        maven { url "https://www.jitpack.io" }
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
