--- a/BrightID/android/gradle.properties
+++ b/BrightID/android/gradle.properties
@@ -44,5 +44,5 @@ android.enableJetifier=true
 AsyncStorage_db_size_in_MB=10
 # org.gradle.daemon=true
 # org.gradle.jvmargs=-Xmx2560m --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-
+VisionCamera_enableCodeScanner=true
 
