--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -37,12 +37,12 @@
     "@react-native-community/slider": "4.5.6",
     "@react-native-community/viewpager": "4.2.2",
     "@react-native-picker/picker": "2.11.0",
-    "@react-navigation/drawer": "6.6.2",
-    "@react-navigation/elements": "1.3.17",
-    "@react-navigation/native": "6.0.8",
-    "@react-navigation/native-stack": "6.9.12",
-    "@react-navigation/stack": "6.3.21",
-    "@reduxjs/toolkit": "1.5.0",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/elements": "^1.3.31",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "apisauce": "2.0.1",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
