--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -12,7 +12,7 @@
     "build:detox:ios": "detox build --configuration ios.sim.debug",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'  --assets-dest='./ios'",
     "test:android": "detox test -c android.emu.debug",
-    "test:ios": "detox test -c ios.debug",
+    "test:ios": "detox test -c ios.sim.debug",
     "test": "jest",
     "lint": "eslint 'src' --quiet --fix",
     "postinstall": "npx jetify && npx patch-package",
@@ -43,12 +43,12 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^1.9.7",
-    "apisauce": "2.0.1",
+    "apisauce": "3.1.0",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
     "compare-versions": "4.1.3",
     "crypto-js": "3.3.0",
-    "detox": "^20.34.2",
+    "detox": "20.33.0",
     "ed2curve": "0.3.0",
     "emittery": "1.1.0",
     "events": "3.3.0",
@@ -135,7 +135,7 @@
     "@types/xml2js": "0.4.14",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
-    "axios": "0.26.1",
+    "axios": "^1.7.7",
     "babel-jest": "29.7.0",
     "babel-plugin-inline-import": "3.0.0",
     "babel-plugin-module-resolver": "5.0.2",
