--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -175,5 +175,5 @@ dependencies {
         implementation jscFlavor
     }
     androidTestImplementation('com.wix:detox:+')
-    // implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
