--- a/BrightID/android/app/src/debug/AndroidManifest.xml
+++ b/BrightID/android/app/src/debug/AndroidManifest.xml
@@ -5,6 +5,5 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:networkSecurityConfig="@xml/network_security_config"/>
+        tools:ignore="GoogleAppIndexingWarning"/>
 </manifest>
