try normal yarn install actions

--- a/.github/workflows/build_iOS.yml
+++ b/.github/workflows/build_iOS.yml
@@ -25,7 +25,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Install pod dependencies
         run: |
@@ -68,7 +68,7 @@ jobs:
   #         cache: 'yarn'
 
   #     - name: Install dependencies
-  #       run: yarn install --frozen-lockfile
+  #       run: yarn install
 
   #     - name: Install pod dependencies
   #       run: |
