--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,16 +16,16 @@ jobs:
         node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
 
       - name: install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: execute tests
         run: yarn test
