--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -25,7 +25,7 @@ jobs:
           cache: 'yarn'
 
       - name: install dependencies
-        run: yarn install
+        run: yarn set version 1.22.22 && yarn cache clean && yarn install --frozen-lockfile
 
       - name: execute tests
         run: yarn test
