--- a/.github/workflows/build_iOS.yml
+++ b/.github/workflows/build_iOS.yml
@@ -25,7 +25,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn set version 1.22.22 && yarn cache clean && yarn install --frozen-lockfile
+        run: yarn cache clean --all && yarn install
 
       - name: Install pod dependencies
         run: |
