--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          # cache: 'yarn'
 
       - name: install dependencies
-        run: yarn cache clean --all && yarn install
+        run: yarn install
 
       - name: execute tests
         run: yarn test
