--- a/.github/workflows/build_iOS.yml
+++ b/.github/workflows/build_iOS.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          # cache: 'yarn'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install
+        run: rm -rf /home/runner/.cache/yarn && yarn install --frozen-lockfile
 
       - name: Install pod dependencies
         run: |
