--- a/.github/workflows/build_iOS.yml
+++ b/.github/workflows/build_iOS.yml
@@ -11,21 +11,17 @@ jobs:
       run:
         working-directory: BrightID
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          node-version: 20
+          cache: ''
 
       - name: Install dependencies
-        run: rm -rf /home/runner/.cache/yarn && yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Install pod dependencies
         run: |
@@ -54,17 +50,13 @@ jobs:
   #     run:
   #       working-directory: BrightID
 
-  #   strategy:
-  #     matrix:
-  #       node-version: [20.x]
-
   #   steps:
   #     - uses: actions/checkout@v4
 
-  #     - name: Use Node.js ${{ matrix.node-version }}
+  #     - name: Use Node.js 20
   #       uses: actions/setup-node@v4
   #       with:
-  #         node-version: ${{ matrix.node-version }}
+  #         node-version: 20
   #         cache: 'yarn'
 
   #     - name: Install dependencies
