--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -19,11 +19,12 @@ jobs:
       - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: 20.x
-          cache: 'yarn'
+          node-version: 20
+          cache: ''
+          # cache: 'yarn'
 
       - name: Install Dependencies
-        run: rm -rf /home/runner/.cache/yarn && yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Deploy to Codepush - Android
         uses: TripleSpeeder/codepush-action@master
