--- a/.github/workflows/build_iOS.yml
+++ b/.github/workflows/build_iOS.yml
@@ -18,7 +18,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: ''
+          cache: 'yarn'
+
+      - name: Clear Yarn cache
+        run: rm -rf node_modules && rm yarn.lock
 
       - name: Install dependencies
         run: yarn install
