--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,8 +18,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: ''
-          # cache: 'yarn'
+          cache: 'yarn'
+
+      - name: Clear Yarn cache
+        run: rm -rf node_modules && rm yarn.lock
 
       - name: install dependencies
         run: yarn install
